<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  -->
    <string name="app_name">ProjectWork</string>

    <!--  -->
    <string name="hello_world">Hello world!</string>

    <!--  -->
    <string name="action_settings">Settings</string>

    <!--  -->
    <string name="button_connect">Connect</string>

    <!--  -->
    <string name="button_disconnect">Disconnect</string>

    <!--  -->
    <string name="title_activity_start_stop">StartStopActivity</string>

    <!--  -->
    <string name="button_start">Start</string>

    <!--  -->
    <string name="button_stop">Stop</string>

    <!--  -->
    <string name="title_section1">title_section1</string>

    <!--  -->
    <string name="title_section2">title_section2</string>

    <!--  -->
    <string name="title_section3">title_section3</string>

    <!--  -->
    <string name="button_tx">TX Msg</string>
    
    <!--  -->
    <string name="button_rx">RX Msg</string>
    
    <!--  -->
    <string name="title_activity_rx">RxActivity</string>

    <!--  -->
    <string name="text_ok">OK</string>
    
</resources>
