<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.projectwork.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical" />


    

    
    <!-- Button CONNECT -->
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/button3"
        android:onClick="connectButton"
        android:text="@string/button_connect"
        android:width="45dp"
        android:background="@drawable/custom_button_green" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/text_ok"
        android:background="@color/red" />

    <!-- Button DISCONNECT -->
    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentRight="true"
        android:onClick="disconnectButton"
        android:text="@string/button_disconnect"
        android:width="45dp"
        android:background="@drawable/custom_button_green" />

    <!-- Button RX -->
    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="29dp"
        android:onClick="rxButton"
        android:text="@string/button_rx" />
    
    <!-- Button TX -->
    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignRight="@+id/textView1"
        android:onClick="txButton"
        android:text="@string/button_tx" />

</RelativeLayout>